--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="message">消息</string>
     <string name="contact">联系人</string>
     <string name="attach_take_pic">Capture</string>
+
+    <string name="defalut">默认字符</string>
 </resources>
