'完善聊天输入框、编写获取视频流及好友请求处理'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,18 @@
     <string name="password">密码</string>
     <string name="login">登录</string>
     <string name="login_out">退出登录</string>
+    <string name="add_friend">添加好友</string>
     <string name="roomCode">房间ID</string>
     <string name="inputMessage">输入消息</string>
     <string name="send">发送</string>
     <string name="me">我的</string>
     <string name="message">消息</string>
     <string name="contact">联系人</string>
+    <string name="new_friend">新的朋友</string>
     <string name="attach_take_pic">Capture</string>
 
     <string name="defalut">默认字符</string>
+
+    <string name="yes">同意</string>
+    <string name="no">拒绝</string>
 </resources>
