--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,18 @@
     <string name="new_friend">新的朋友</string>
     <string name="attach_take_pic">Capture</string>
 
+
+    <string name="back">返回</string>
     <string name="defalut">默认字符</string>
 
     <string name="yes">同意</string>
     <string name="no">拒绝</string>
+
+    <string name="move_up_to_cancel">手指上滑，取消发送</string>
+    <string name="release_to_cancel">松开手指，取消发送</string>
+    <string name="Recording_without_permission">无录音权限</string>
+    <string name="The_recording_time_is_too_short">录音时间太短</string>
+    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
+    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
+    <string name="recoding_fail">录音失败，请重试！</string>
 </resources>
